# tpt-gpu

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMM_VS_CUBLAS_IMPLEMENTATION.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MODELS_REGISTRY.md  README.md  RELEASE_CHECKLIST.md  fix_claude.py  spec.txt  todo.md  todo1.md
crates/tptir-spec/: Cargo.toml  README.md
crates/tptir-spec/src/: attr.rs  dialect.rs  lib.rs  ops.rs  text.rs  types.rs
docs/: use-cases.md  (+2 more)
layer2_driver/rust/: Cargo.toml  README.md
layer2_driver/rust/src/: ffi.rs  ioctl.rs  lib.rs  mem.rs  submit.rs
layer2_tptd/rust/: Cargo.toml  README.md
layer2_tptd/rust/src/: context.rs  fault.rs  lib.rs  main.rs  mmio.rs  protocol.rs  submit.rs
layer3_tptc/: CMakeLists.txt  README.md  gen_a.py  gen_b.py  gen_c.py  gen_d1.py  gen_e.py  gen_f.py  gen_g1.py  gen_g2.py  gen_g3.py  gen_g4.py  gen_g5a.py  gen_g5b.py  gen_part1.py  gen_part2a.py  listfiles.py
layer3_tptc/include/tptc/: tptc.h
layer3_tptc/include/tptir/CAPI/: tptir_capi.h
layer3_tptc/include/tptir/CodeGen/: TPTCodeGen.h
layer3_tptc/include/tptir/Dialect/: TPTIRDialect.h  TPTIROps.h  TPTIRTypes.h
layer3_tptc/include/tptir/IR/: TPTIRBuilder.h
layer3_tptc/include/tptir/Parser/: TPTAsmParser.h
layer3_tptc/include/tptir/Pass/: TPTIRPasses.h
layer3_tptc/lib/CAPI/: tptir_capi.cpp
layer3_tptc/lib/CodeGen/: TPTCodeGen.cpp
layer3_tptc/lib/Dialect/: TPTIRDialect.cpp  TPTIROps.cpp  TPTIRTypes.cpp
layer3_tptc/lib/IR/: TPTIRBuilder.cpp
layer3_tptc/lib/Parser/: TPTAsmParser.cpp
layer3_tptc/lib/Pass/: TPTIRPasses.cpp
layer3_tptc/rust/: Cargo.toml  README.md
layer3_tptc/rust/src/: dispatch.rs  ffi.rs  fusion.rs  ir.rs  lib.rs  passes.rs  validate.rs
layer3_tptc/spec/: tptir_spec.md
layer3_tptc/test/: TestTPTIR.cpp
layer4_tptr/tptr-core/: Cargo.toml  README.md
layer4_tptr/tptr-core/src/: arch.rs  inference.rs  kv_cache.rs  lib.rs
layer4_tptr/tptr-core/src/dispatch/: mod.rs
layer5_tptp/: Cargo.toml
layer5_tptp/benches/: Cargo.toml  README.md
layer5_tptp/benches/src/: lib.rs  report.rs
layer5_tptp/benches/src/examples/: ci_regression.rs  fused_gemm_benchmark.rs  profile_attention.rs  profile_conv2d.rs  profile_gemm.rs  run_benchmarks.rs  run_comprehensive.rs
layer5_tptp/benches/src/kernels/: attention.rs  conv2d.rs  gemm.rs  mod.rs
layer5_tptp/spec/: tptp_spec.md
layer5_tptp/tptir/: tptir_attention.mlir  tptir_conv2d.mlir  tptir_gemm.mlir  tptir_kernels.td  tptir_quant_gemm.mlir
layer5_tptp/tptp-core/: Cargo.toml  README.md
layer5_tptp/tptp-core/examples/: attention_test.rs  conv2d_test.rs  conv3d_test.rs  gemm_test.rs
layer5_tptp/tptp-core/src/: error.rs  kernel.rs  lib.rs
layer5_tptp/tptp-core/src/ffi/: mod.rs  tptir_ffi.rs
layer5_tptp/tptp-core/src/kernels/: attention.rs  conv2d.rs  embedding.rs  gemm.rs  mod.rs  quant_gemm.rs
layer5_tptp/tptp-core/src/memory/: buffer.rs  mod.rs
layer5_tptp/tptp-core/src/tptir/: compile.rs  mod.rs
layer5_tptp/tptp-core/tests/: integration.rs
layer6_framework/: pyproject.toml  setup.py
layer6_framework/examples/: basic_usage.py  jax_interop.py  pytorch_interop.py
layer6_framework/spec/: layer6_spec.md
layer6_framework/tests/: test_core.py  test_dispatch.py  test_dispatch_rust.py  test_pytorch_backend.py  test_tensor.py
layer6_framework/tptr/: __init__.py
layer6_framework/tptr-core/: Cargo.toml  README.md
layer6_framework/tptr-core/src/dispatch/: batch.rs  ops.rs  pool.rs
layer6_framework/tptr/_ffi/: __init__.py  _sim.py
layer6_framework/tptr/core/: __init__.py
layer6_framework/tptr/dispatch/: __init__.py
layer6_framework/tptr/jax/: __init__.py
layer6_framework/tptr/pytorch/: __init__.py  autograd.py  hf_bridge.py  ops.py  stream.py  tensor.py
layer6_framework/tptr/tensor/: __init__.py
layer6_tptf/tptf-dispatch/: Cargo.toml
layer6_tptf/tptf-dispatch/src/: gemm.rs
layer7_tptb/: BETA_RELEASE.md  Cargo.toml  RELEASE_NOTES.md
layer7_tptb/spec/: tpts_spec.md
layer7_tptb/tools/: cli.tpts  deploy.tpts  profiler.tpts
layer7_tptb/tptb-cli/: Cargo.toml  README.md
layer7_tptb/tptb-cli/src/: main.rs
layer7_tptb/tptb-core/: Cargo.toml  README.md
layer7_tptb/tptb-core/src/: ast.rs  errors.rs  lexer.rs  lib.rs  parser.rs
layer7_tptb/tptb-core/src/introspect/: mod.rs
layer7_tptb/tptb-core/src/modules/: config.rs  mod.rs  resolve.rs  stdlib.rs
layer7_tptb/tptb-core/src/semantic/: builtins.rs  constraints.rs  metadata.rs  mod.rs  types.rs
layer7_tptb/tptb-format/: Cargo.toml  README.md
layer7_tptb/tptb-format/src/: formatter.rs  lib.rs  linter.rs
layer7_tptb/tptb-lsp/: Cargo.toml  README.md
layer7_tptb/tptb-lsp/src/: completion.rs  definition.rs  diagnostics.rs  hover.rs  main.rs  symbols.rs
tools/kernel-generator/: Cargo.toml  README.md
tools/kernel-generator/src/: main.rs
tools/kernel-optimizer/: Cargo.toml  README.md
tools/kernel-optimizer/src/: attention_eval.rs  conv2d_eval.rs  fused_eval.rs  lib.rs  main.rs  normalization_eval.rs  real_evaluator.rs  vector_add_eval.rs
tools/model-optimizer/: Cargo.toml  README.md
tools/model-optimizer/docs/: developer-portal.md
tools/model-optimizer/src/: activation_capture.rs  benchmark.rs  calibration.rs  domain_mapper.rs  kv_calculator.rs  lib.rs  main.rs  profiler.rs  pruner.rs  quant_allocator.rs  sensitivity.rs  streaming.rs  tptf_format.rs
tools/model-optimizer/src/export/: detect.rs  exl2.rs  gguf.rs  mod.rs
tools/model-optimizer/tests/: integration_test.rs
tools/model-registry/: Cargo.toml  README.md
tools/model-registry/src/: hf.rs  lib.rs  main.rs
tools/shared/: Cargo.toml  README.md
tools/shared/examples/: basic_usage.rs
tools/shared/src/: error.rs  lib.rs  request.rs  response.rs
tools/shared/src/providers/: claude.rs  mod.rs  ollama.rs  openrouter.rs
tools/tpt-bench/: Cargo.toml  README.md
tools/tpt-bench/src/: main.rs  scoreboard.rs
tools/tpt-playground/: Cargo.toml  README.md
tools/tpt-playground/src/: lib.rs
tools/vendor-cert/: Cargo.toml  README.md
tools/vendor-cert/src/: main.rs  report.rs  tests.rs
(+76 files in other folders)
