[workspace]
resolver = "2"
members = ["tptp-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TPT GPU Contributors"]
description = "TPT Primitives - TPTIR kernels + Rust wrappers for GPU compute"
license = "Apache-2.0"
repository = "https://github.com/tpt-gpu/tpt-gpu"

[workspace.dependencies]
thiserror = "2"
parking_lot = "0.12"
log = "0.4"
bytemuck = "1.21"
libc = "0.2"
