[workspace]
resolver = "2"
members = ["tptb-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TPT GPU Contributors"]
description = "TPT Brain — TPT Script compiler frontend (lexer, parser, semantic analysis)"
license = "Apache-2.0"
repository = "https://github.com/tpt-gpu/tpt-gpu"

[workspace.dependencies]
thiserror = "2"
