[workspace]
resolver = "2"
members = ["tptb-core", "tptb-cli", "tptb-lsp", "tptb-format"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["TPT GPU Contributors"]
description = "TPT Brain — TPT Script compiler frontend (lexer, parser, semantic analysis)"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/tpt-solutions/tpt-gpu"
documentation = "https://docs.rs/tpt-gpu-script-core"
keywords = ["gpu", "compiler", "ml", "ai", "tptscript"]
categories = ["compilers", "development-tools"]
rust-version = "1.75"

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tower = { version = "0.4", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"