[package]
name        = "tptd"
version     = "0.1.0"
edition     = "2021"
authors     = ["TPT GPU Contributors"]
description = "TPT GPU userspace driver library"
license     = "MIT OR Apache-2.0 WITH LLVM-exception"
repository  = "https://github.com/tpt-solutions/tpt-gpu"
documentation = "https://docs.rs/tptd"
readme      = "README.md"
keywords    = ["gpu", "driver", "ffi", "hardware", "compute"]
categories  = ["hardware-support", "os::linux-apis"]

[lib]
name    = "tptd"
crate-type = ["cdylib", "rlib"]   # rlib for Rust consumers; cdylib for C FFI

[[bin]]
name = "tptd-info"
path = "src/bin/tptd_info.rs"

[dependencies]
libc        = "0.2"
thiserror   = "1"
log         = "0.4"

[dev-dependencies]
env_logger  = "0.11"

[features]
default = []
# Enable simulated (no-hardware) device for CI / testing
sim     = []
