[package]
name    = "tptd"
version = "0.1.0"
edition = "2021"
description = "TPT GPU userspace daemon — context management and VRAM isolation"
license = "Apache-2.0"

[[bin]]
name = "tptd"
path = "src/main.rs"

[lib]
name = "tptd_lib"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio      = { version = "1", features = ["full"] }
# Unix socket server
tokio-util = "0.7"
# JSON protocol
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow     = "1"
thiserror  = "1"
# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Atomic primitives
atomic = "0.6"
# Memory-mapped I/O
memmap2 = "0.9"

[dev-dependencies]
tokio-test = "0.4"
