[package]
name = "tptp-benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Benchmark harness for TPT Primitives — GEMM vs cuBLAS, Attention vs FlashAttention, Conv2D vs cuDNN"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
tptp-core = { path = "../tptp-core" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
clap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "run_benchmarks"
path = "src/examples/run_benchmarks.rs"
