[package]
name = "tptp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TPT Primitives - TPTIR kernel wrappers and vendor library integration"
license.workspace = true
repository.workspace = true

[lib]
name = "tptp"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
env_logger = "0.11"

[features]
default = ["tptir-backend"]
# Enable TPTIR compiler backend (requires tptc C API)
tptir-backend = []
# Enable vendor library backends
cuda = []
rocm = []
metal = []
# Simulation mode for CI / testing without hardware
sim = []
