[package]
name = "tptp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TPT Primitives - TPTIR kernel wrappers and vendor library integration"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tptp-core"
readme = "README.md"
keywords = ["gpu", "compute", "kernels", "simt", "hpc"]
categories = ["hardware-support", "science::ml"]

[lib]
name = "tptp_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
# Enable TPTIR compiler backend (requires tptc C library to be linked)
tptir-backend = []
# Enable vendor library backends
cuda = []
rocm = []
metal = []
# Simulation mode for CI / testing without hardware; disables all FFI
sim = []
