[package]
name = "tptr-dispatch"
version = "0.1.0"
edition = "2021"
description = "TPT Framework Backends - Performance-critical dispatch paths"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
authors = ["TPT GPU Contributors"]
repository = "https://github.com/tpt-solutions/tpt-gpu"
documentation = "https://docs.rs/tptr-dispatch"
readme = "README.md"
keywords = ["gpu", "dispatch", "pytorch", "jax", "ml"]
categories = ["science::ml", "hardware-support"]

[dependencies]
tptr-core = { path = "../../layer4_tptr/tptr-core", version = "0.1.0" }

[lib]
name = "tptr_dispatch"
path = "src/lib.rs"

