[package]
name = "tpt-gpu-framework-dispatch"
version = "0.1.0"
edition = "2021"
description = "TPT Framework Backends - Performance-critical dispatch paths"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
authors = ["TPT GPU Contributors"]
repository = "https://github.com/tpt-solutions/tpt-gpu"
documentation = "https://docs.rs/tpt-gpu-framework-dispatch"
readme = "README.md"
keywords = ["gpu", "dispatch", "pytorch", "jax", "ml"]
categories = ["science::ml", "hardware-support"]

[dependencies]
tpt-gpu-runtime = { path = "../../layer4_tptr/tptr-core", version = "0.1.0" }

[lib]
name = "tpt_gpu_framework_dispatch"
path = "src/lib.rs"

