[package]
name = "tpt-gpu-script-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "tpt — command-line interface for the TPT Script compiler"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tpt-gpu-script-cli"
readme = "README.md"
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tpt-gpu-script"
path = "src/main.rs"

[dependencies]
tpt-gpu-script-core = { path = "../tptb-core", version = "1.0.0" }
