[package]
name = "tpt-gpu-script-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TPT Script compiler frontend -- lexer, AST, and parser"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tpt-gpu-script-core"
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version = "1.75"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
toml = "0.8"

[dev-dependencies]
# Used only in tests
