[package]
name = "tptb-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TPT Script Language Server Protocol implementation"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tptb-lsp"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
tptb-core = { path = "../tptb-core", version = "1.0.0" }
tokio = { workspace = true }
tower-lsp = { workspace = true }
dashmap = { workspace = true }
tracing-subscriber = "0.3"
