[package]
name = "tpt-gpu-script-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TPT Script Language Server Protocol implementation"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tpt-gpu-script-lsp"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tpt-gpu-lsp"
path = "src/main.rs"

[dependencies]
tpt-gpu-script-core = { path = "../tptb-core", version = "1.0.0" }
tokio = { workspace = true }
tower-lsp = { workspace = true }
dashmap = { workspace = true }
tracing-subscriber = "0.3"
