[package]
name = "tpt-gpu-kernelgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TPT GPU kernel generator CLI"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tpt-gpu-kernelgen"
readme = "README.md"
keywords = ["gpu", "kernels", "codegen", "tptir", "hpc"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tpt-gpu-kernelgen"
path = "src/main.rs"

[dependencies]
tpt-gpu-compiler = { path = "../../layer3_tptc/rust", version = "0.1.0" }
tpt-gpu-shared = { path = "../shared", version = "1.0.0" }
clap = { workspace = true }
anyhow = { workspace = true }
