[package]
name = "tpt-optimizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Self-iterating TPT GPU kernel parameter optimizer"
repository.workspace = true
documentation = "https://docs.rs/tpt-optimizer"
readme = "README.md"
keywords = ["gpu", "kernels", "optimization", "autotuning", "hpc"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "tpt_optimizer"
path = "src/lib.rs"

[[bin]]
name = "tpt-optimizer"
path = "src/main.rs"

[dependencies]
tpt-shared = { path = "../shared", version = "1.0.0" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
