[package]
name = "tpt-model-optimizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hardware-aware LLM model optimizer: quantization, surgical pruning, and TPTF export"
repository.workspace = true
documentation = "https://docs.rs/tpt-model-optimizer"
readme = "README.md"
keywords = ["gpu", "llm", "quantization", "inference", "optimization"]
categories = ["command-line-utilities", "science::ml"]

[lib]
name = "tpt_model_optimizer"
path = "src/lib.rs"

[[bin]]
name = "model-optimizer"
path = "src/main.rs"

[dependencies]
tpt-shared         = { path = "../shared", version = "1.0.0" }
serde      = { workspace = true }
serde_json = { workspace = true }
clap       = { workspace = true }
anyhow     = { workspace = true }
memmap2    = { workspace = true }
bytemuck  = "1.21"
byteorder  = "1.5"