[package]
name = "tpt-gpu-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "User-runnable dynamic benchmark suite for TPT GPU kernels"
repository.workspace = true
documentation = "https://docs.rs/tpt-gpu-bench"
readme = "README.md"
keywords = ["gpu", "benchmarking", "kernels", "performance", "hpc"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tpt-gpu-bench"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
