[workspace]

[package]
name = "tpt-playground"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the TPT Script compiler playground"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tptb-core = { path = "../../layer7_tptb/tptb-core" }

[profile.release]
opt-level = "z"
lto = true
