[workspace]

[package]
name = "tpt-vendor-cert"
version = "0.1.0"
edition = "2021"
authors = ["TPT GPU Contributors"]
description = "TPT-GPU vendor certification test suite"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/tpt-solutions/tpt-gpu"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "tpt-vendor-cert"
path = "src/main.rs"
